--- a/userside/pubspec.yaml
+++ b/userside/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^12.2.0
   geolocator: ^12.0.0
   image_picker: ^1.1.2
+  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,15 +60,16 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+    
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+      
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/logomain.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -95,3 +97,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+  
