--- a/userside/pubspec.yaml
+++ b/userside/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^12.0.0
   image_picker: ^1.1.2
   glassmorphism: ^3.0.0
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logomain.png
+    - assets/animations/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
